--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,11 @@
 site_name: My Docs
 theme:
   name: material
+nav:
+  - Home: index.md
+  - Introduction: Introduction.md
+  - Testing with Postman: Testing with Postman.md 
+  - Inventory: Inventory.md
+  - Addresses: Addresses.md
+
+use_directory_urls: false
